wwwroot/css/indexstyle.css
body, html, .container{
    background-size: cover;

}
body{
    background-image: url("../images/hero-background2.jpg");
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.container.wrapper {
    width: 100% !important;
    height: auto;
    margin: 0px 0px 0px 0px;
    padding: 50px 0px 0px 0px;
}

.login:hover{
    cursor: pointer;
}

body{
    background-color: #F5F5F5 !important;
}

#secondarycontainer .result {
    height: 25%;
    margin-left: 1%;
    margin-bottom: 2%;
    text-align: left;
    background-color: white;
    box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 2px 3px rgba(0,0,0,.2);
    color: darkslategray;
    margin: 2% 10%;
    border-radius: 5px;
}

#secondarycontainer .respic{
    width: 40%;
    max-height: 100%;
    height: 100%;
    vertical-align: top;
    border-radius:3px;
}

#secondarycontainer .resinfo{
    width:58%;
    display: inline-block;
    vertical-align: top;
    text-align: center;
    padding-top: 2%;
}

#secondarycontainer h4{
    font-weight: 900;
    font-size: 18px;
    line-height: 12px;
}

#secondarycontainer p{
    font-size: 16px;
}

#secondarycontainer h5{
    color: #35BFFF;
    font-size: 16px;
}

#secondarycontainer a:hover{
    text-decoration: none;
}

#secondarycontainer h5:hover{
    color: rgb(22, 138, 192);
}

#secondarycontainer h6{
    font-size: 14px;
    margin-top: 12px;
}

#homecontainer .searchbox{
    background-color: rgb(32, 32, 32);
    width: 450px;
    height: 100%;
    border-radius:5px;
    box-shadow: 2px 2px;
    margin: 3% 5% 0% 10%;
    padding: 1% 3%;
    display: inline-block;
}

#homecontainer .searchbox h4{
    color: whitesmoke;
    font-weight: bold;
    font-size: 40px;
    line-height: 42px;
}

#homecontainer .form-group{
    width: 100%;
    margin: 5% 0%;
}

#homecontainer .whereinput{
    width: 97%;
}

#homecontainer .daterange{
    width: 45%;
    display: inline-block;
}

#homecontainer .when{
    display: block;
}

#homecontainer .fa-chevron-down{
    color: white;
    font-size: 30px;
    margin-top: 1%;
}

#homecontainer .carrot{
    text-align:center;
}

#homecontainer .fa-chevron-down:hover{
    cursor: pointer;
}

#homecontainer label{
    color: whitesmoke;
    font-size: 20px;
}

#homecontainer .form-control{
    height: 50px;
    font-size: 16px;
    padding: 12px 18px;
    color: #202020;
}

#homecontainer ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
  color: #202020;
  opacity: 1; /* Firefox */
}

#homecontainer :-ms-input-placeholder { /* Internet Explorer 10-11 */
  color: #202020;
}

#homecontainer ::-ms-input-placeholder { /* Microsoft Edge */
  color: #202020;
}

.searchbox .btn-primary{
    margin-left: 40%;
    margin-top: 3%;
    background-color: #35BFFF;
    color: whitesmoke;
    font-weight: bold;
    font-size: 20px;
}
/* Search modal */
.modal-body img {
    width: 100%;
    display: block;
}
.searchModal.modal-body {
    text-align: center;
}

.modal-result {
    align-content: center;
    text-align: center;
}

@media screen and (max-width : 768px) {
    #homecontainer .searchbox {
        margin: 10% 5%;
        width: auto;
    }
}

